# css_dev_automator

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
Templates/Excel/: DataTemplate.xlsx
src/: __init__.py  config_manager.py  database_manager.py  excel_manager.py  excel_validator.py  file_manager.py  gui_manager.py  json_processor.py  main_processor.py  project_generator.py  prompt_processor.py  solution_manager.py  sp_executor.py  token_validator.py
